--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "ajv": "^8.11.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
