--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -21,7 +21,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "ajv": "^8.11.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
