--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -22,11 +22,17 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/uuid": "^9.0.0",
     "ajv": "^8.11.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "image-size": "^1.0.2",
+    "magic-bytes.js": "^1.0.13",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "uuid": "^9.0.0"
   }
 }
