--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express-fileupload": "^1.4.1",
+    "@types/sharp": "^0.31.0",
     "@types/uuid": "^9.0.0",
     "ajv": "^8.11.2",
     "bcrypt": "^5.1.0",
@@ -33,6 +34,7 @@
     "magic-bytes.js": "^1.0.13",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "sharp": "^0.31.2",
     "uuid": "^9.0.0"
   }
 }
