--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -26,6 +26,7 @@
     "@types/sharp": "^0.31.0",
     "@types/uuid": "^9.0.0",
     "ajv": "^8.11.2",
+    "ajv-formats": "^2.1.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
