--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.6",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
@@ -35,6 +36,7 @@
     "magic-bytes.js": "^1.0.13",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "sharp": "^0.31.2",
     "uuid": "^9.0.0"
   }
