--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/sharp": "^0.31.0",
     "@types/uuid": "^9.0.0",
     "ajv": "^8.11.2",
@@ -33,6 +34,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "image-size": "^1.0.2",
+    "jsonwebtoken": "^8.5.1",
     "magic-bytes.js": "^1.0.13",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
