--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -28,6 +28,7 @@
     "@types/sharp": "^0.31.0",
     "@types/uuid": "^9.0.0",
     "ajv": "^8.11.2",
+    "ajv-errors": "^3.0.0",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
