--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "generate-password": "^1.7.0",
     "image-size": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "magic-bytes.js": "^1.0.13",
