--- a/04-front-end/package.json
+++ b/04-front-end/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
