--- a/04-front-end/package.json
+++ b/04-front-end/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "node-sass": "^7.0.3",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/path-browserify": "^1.0.0",
     "@types/react-redux": "^7.1.25"
   }
 }
