--- a/04-front-end/package.json
+++ b/04-front-end/package.json
@@ -10,22 +10,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.10",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "node-sass": "^7.0.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,7 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
     "@types/path-browserify": "^1.0.0",
-    "@types/react-redux": "^7.1.25"
+    "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "typescript": "^4.9.4"
   }
 }
