--- a/04-front-end/package.json
+++ b/04-front-end/package.json
@@ -16,6 +16,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
